<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    tools:locale="en">
    <string name="app_name">Trust</string>
    <string name="app_name_pro">Trust Pro</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="msg_try_again">Sorry, try again</string>
    <string name="msg_redraw_pattern_to_confirm">Redraw pattern to confirm:</string>
    <string name="cmd_retry">Retry</string>
    <string name="cmd_cancel">Cancel</string>
    <string name="cmd_confirm">Confirm</string>
    <string name="cmd_continue">Continue</string>
    <string name="msg_connect_4dots">Connect at least 4 dots.\nTry again…</string>
    <string name="msg_ok">OK</string>
    <string name="msg_draw_an_unlock_pattern">Draw an unlock pattern:</string>
    <string name="msg_release_finger_when_done">Release finger when done</string>
    <string name="msg_pattern_recorded">Pattern recorded!</string>
    <string name="msg_your_new_unlock_pattern">Your new unlock pattern:</string>
    <string name="msg_draw_pattern_to_unlock">Draw pattern to unlock:</string>
    <string name="too_many_pattern_attempts">Too many attempts…</string>
    <string name="pattern_removed">Pattern removed!</string>
    <string name="news_title">News</string>
    <string name="log_recording_started">Log recording started</string>
    <string name="log_has_been_reset">Log has been reset</string>
    <string name="log_recording_started_description">Trust just started recording for the first time. A log has been created.</string>
    <string name="log_has_been_reset_description">A user has reset Trust\'s internal database.</string>
    <string name="logging_paused_by_user">Logging paused by user</string>
    <string name="logging_paused_by_user_description">Trust\'s logging was stopped by a user through the userinterface button.</string>
    <string name="logging_resumed_by_user">Logging resumed by user</string>
    <string name="logging_resumed_by_user_description">Trust was activated by the user (i.e through the RUN button) and resumed its previous log.</string>
    <string name="log_was_resumed_by_the_system">Log was resumed by the system</string>
    <string name="log_was_resumed_by_the_system_description">The system just resumed trust. This could happen after a reboot or when the system previously killed Trust to free resources.</string>
    <string name="logging_was_killed_by_system">Logging was killed (by system?)</string>
    <string name="logging_was_killed_by_system_description">Trust was killed, possibly by the system.</string>
    <string name="a_medium_has_been_removed">A medium has been removed</string>
    <string name="a_medium_has_been_removed_description">Some kind of media was removed from your device. This could be an sdcard or a usb stick. This could also mean your phone was connected to a computer where the media was accessed.</string>
    <string name="incoming_call_from">Incoming call from %s</string>
    <string name="incoming_call_from_description">You got an incoming call from %s. This just indicates there was an incoming call, nothing more.</string>
    <string name="new_outgoing_call_to">New outgoing call to %s</string>
    <string name="new_outgoing_call_to_description">An outgoing call was placed %s. Whether it went through, was accepted or even reached the network is unknown.</string>
    <string name="call_placed_to_network">Call placed to network</string>
    <string name="call_accepted_by_you">Call ACCEPTED by you</string>
    <string name="call_off_hook_description">If there was an incoming call to this device, this means it was accepted. If there was an outgoing call being placed, it means it reached the network. We have no way to know if the call went through or even was accepted on the other side.</string>
    <string name="call_done_declined">Call done/declined</string>
    <string name="call_done_declined_description">The phone went into CALL_IDLE state, which means a call was finished, declined or aborted.</string>
    <string name="power_plugged_in">Power plugged in</string>
    <string name="power_plugged_in_description">A usb powercord or wall charger was plugged into the device, alternatively it can indicate that the phone was placed into a docking station.</string>
    <string name="power_disconnected">Power disconnected</string>
    <string name="power_disconnected_description">The device was disconnected from its previous power source.</string>
    <string name="boot_completed">Boot completed</string>
    <string name="boot_completed_description">The device did successfully boot up</string>
    <string name="shutdown_initiated">Shutdown initiated</string>
    <string name="shutdown_initiated_description">Someone initiated a shutdown or reboot.</string>
    <string name="screen_on">Screen ON</string>
    <string name="screen_on_description">The screen/backlight was turned on.</string>
    <string name="screen_off">Screen OFF</string>
    <string name="screen_off_description">The screen/backlight was turned off</string>
    <string name="lockscreen_unlocked">Lockscreen UNLOCKED!</string>
    <string name="lockscreen_unlocked_description">Your lockscreen was unlocked, PIN entered or PATTERN drawn. This indicates user presence.</string>
    <string name="app_added">App added: %s</string>
    <string name="app_added_description">An application with the name %s was added.</string>
    <string name="app_changed">App changed: %s</string>
    <string name="app_changed_description">An application with the name %s was changed. E.g., some of its components could have been changed (i.e. enabled/disabled).</string>
    <string name="app_data_wiped_for">App-Data wiped for %s</string>
    <string name="app_data_wiped_for_description">App-Data has been wiped for %s. This is either caused by a cleaning app of some sort or a user pressing \'clear data\' in the systems appmanagement section</string>
    <string name="app_installed">App installed: %s</string>
    <string name="app_installed_description">An app with the name %s was installed (usually by a user through the Google Play Store)</string>
    <string name="app_deleted">App deleted: %s</string>
    <string name="app_deleted_description">The App %s was removed.</string>
    <string name="app_replaced">App replaced: %s</string>
    <string name="app_replaced_description">The App  %s was replaced. Usually this happens during installation of an update.</string>
    <string name="app_restarted">App restarted: %s</string>
    <string name="app_restarted_description">The app with the name %s was restarted. This usually is acompanied by a changed/cleared or replaced event.</string>
    <string name="lost_mobile_data_connection">Lost mobile data connection</string>
    <string name="lost_mobile_data_connection_description">We lost the mobile (cell) data connection, either there is no reception at the moment or we switched to Wi-Fi.</string>
    <string name="restored_mobile_data_connection">Restored mobile data connection</string>
    <string name="restored_mobile_data_connection_description">The mobile data connection was restored, possibly because of regained reception or because we lost our Wi-Fi connection.</string>
    <string name="lost_wifi_connection">Lost Wi-Fi connection: %s</string>
    <string name="lost_wifi_connection_description">Our previous Wi-Fi connection with %s was lost.</string>
    <string name="restored_wifi_connection">Restored Wi-Fi connection: %s</string>
    <string name="restored_wifi_connection_description">We restored a Wi-Fi connection to the network %s.</string>
    <string name="app_foreground_activity">App foreground activity: %s</string>
    <string name="app_foreground_activity_description">The app %s showed foreground activity. This means it was the top most application at that moment.</string>
    <string name="run">Run</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="help_translate">Help translate</string>
    <string name="about">About</string>
    <string name="what_happened">What happened:</string>
    <string name="event_no">Event No.</string>
    <string name="about_head">Welcome to Trust by darken!</string>
    <string name="about_section1">Trust can be seen as a small logging tool, maybe as your phones diary. \nIt will keep a log of things that happened on your device. Whether it has been incoming calls, changed apps or your screen has been turned on or unlocked.\nYou can use it if you suspect that apps have been installed that you don\'t know of or if you left your phone on the table and fear someone used it without consent.</string>
    <string name="about_section2">The difference between the free and the pro version is the amount of shown past events.\nWhile the free version shows the events of the last day, the Pro version will show all available events.\nIt won\'t be able to retroactively display events that happened before it was installed.</string>
    <string name="news_head">Have you rated Trust yet?</string>
    <string name="news_head_pro">Thanks for your support!\nHave you rated Trust yet?</string>
    <string name="news_end">If you like, you can contact me via support@darken.eu\n\nIf you find a problem, please give me a chance to fix it and mail me.</string>
    <string name="no_market_application_found">No market application was found!</string>
    <string name="hide">Hide</string>
    <string name="visit_market">Visit Google Play</string>
    <string name="buy_pro">Purchase Trust Pro</string>
    <string name="email_darken">Email darken</string>
    <string name="free_version_limited">Trust Free is limited to 24h</string>
    <string name="preferences_autostart_summary">Start Trust automatically after reboot</string>
    <string name="preferences_autostart_title">Autostart</string>
    <string name="preferences_notification_summary">Show a notification when Trust is running</string>
    <string name="preferences_notification_title">Notification</string>
    <string name="preferences_general">General</string>
    <string name="preferences_security">Security</string>
    <string name="preferences_create_protection_summary">Require a password to open Trust</string>
    <string name="preferences_create_protection_title">Password protection</string>
    <string name="preferences_clear_protection_summary">Disable the LockPattern protection</string>
    <string name="preferences_clear_protection_title">No lock</string>
    <string name="preference_database">Database</string>
    <string name="preferences_history_length_dialog_title">History length</string>
    <string name="preferences_history_length_dialog_message">Enter in days (0=forever)</string>
    <string name="preferences_history_length_summary">For how many days do you want to keep the events?</string>
    <string name="preferences_history_length_title">History length</string>
    <string name="preferences_database_reset_summary">Empties the database. The reset will be shown in the new log.</string>
    <string name="preferences_database_reset_title">Reset database</string>
    <string name="export_database">Export database</string>
    <string name="show_trust_events">Show Trust events</string>
    <string name="show_system_events">Show system events</string>
    <string name="show_screen_events">Show screen events</string>
    <string name="show_app_events">Show app events</string>
    <string name="show_call_events">Show call events</string>
    <string name="show_cell_events">Show cell events</string>
    <string name="show_wifi">Show Wi-Fi</string>
    <string name="follow_darken">Follow darken</string>
</resources>