<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:trust="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/starttracking"
        android:icon="@drawable/ic_action_playback_play"
        android:title="@string/run"
        trust:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/filter"
        trust:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/export"
        android:icon="@drawable/ic_action_export"
        android:title="@string/export_database"/>
    <item
        android:id="@+id/follow"
        android:icon="@drawable/ic_action_twitter"
        android:title="@string/follow_darken"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_help"
        android:title="@string/about"/>
</menu>
