<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/trustevents"
                android:text="" />

            <CheckBox
                android:id="@+id/show_trust_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_trust_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/system_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_system_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_system_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/screen_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_screen_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_screen_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/app_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_app_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_app_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/call_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_call_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_call_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/cell_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_cell_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_cell_events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/wifi_events"
                android:text="" />

            <CheckBox
                android:id="@+id/show_wifi_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/show_wifi" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>